<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    tools:context=".features.main.view.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnClearAllData"
        android:layout_marginBottom="10dp"
        tools:itemCount="50"
        android:visibility="invisible"
        android:transitionName="data"
        tools:visibility="visible"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btnClearAllData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_data"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>