<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_save"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save" />
</menu>